--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 	    <meta name="author" content="">
 	    <meta name="keywords" content="Architect, Architecture, Architecture Excellence, Building Design, Urban Planning, Sustainable architecture,Structural Engineering
         Interior Spaces, Commercial Projects, Residential Design, Concept Design">
-	    <meta name="description" content="Welcome to the digital portfolio of Wafula Mola, a distinguished architect with a remarkable journey spanning over three decades in the field of architecture.">
+	    <meta name="description" content="Welcome to the digital portfolio of Wafula Mola, a distinguished architect with a remarkable journey spanning over three decades in the field of architecture."/>
 
 	    <link rel="stylesheet" type="text/css" href="{% static 'css/normalize.css' %}">
 	    <link rel="stylesheet" type="text/css" href="{% static 'icomoon/icomoon.css' %}">
